--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# set this as 'Referer' on Postman
+SANCTUM_STATEFUL_DOMAINS=front.sanctum.test
+SESSION_DOMAIN=.sanctum.test
